--- a/run_queries.ipynb
+++ b/run_queries.ipynb
@@ -12,7 +12,7 @@
     "api_key = '' # put in your api key\n",
     "mimic_path = '/Users/raovish6/Documents/MRG_entailment/mimic_train_subset_reports_new.csv' # path to full mimic train, preprocessed by lab\n",
     "mimic_df = pd.read_csv(mimic_path)\n",
-    "testing_df = mimic_df[:1]"
+    "testing_df = mimic_df[:10]"
    ]
   },
   {
@@ -213,28 +213,42 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
     "# Example 2: given a dictionary of errors to try, try each of them individually and save the outputs within a root directory of choice\n",
+    "\n",
     "error_dict = {\n",
-    "    0: \"Add repetitions of sentences (in this case, mark the second instance of the sentence as the error, not the first)\",\n",
-    "    1: \"Introduce sentences that could be part of a radiology report regarding the presence of one or more of these devices such as these: pacemaker, central venous line, NG tube, ET tube. Use your medical knowledge to frame sentences that sound clinically plausible.\",\n",
-    "    2: \"Mislabel of the names of devices that are present in the chest\",\n",
-    "    3: \"Use your medical knowledge to change the position of a device that is clinically plausible (e.g., ET tube is 5 cm from the carina can be changed to ET tube is 1 cm from the carina)\",\n",
-    "    4: \"Add omissions: remove a particular finding from the report (either removing a sentence or part of a sentence). Only remove POSITIVE findings (i.e., you can remove 'cardiomegaly' but not 'the heart is normal in size').\",\n",
-    "    5: \"Add false predictions: add a finding that is not present in the report (either adding a sentence or modifying a sentence to insert). These should be plausible findings that could be present in the report.\",\n",
-    "    6: \"Add incorrect severity: change the severity of a finding in the report (e.g., change 'mild' to 'moderate'; always modifying a sentence).\",\n",
-    "    7: \"Add incorrect locations: change the location or anatomy of a finding in the report (e.g., change 'right' to 'left' or 'lateral' to 'medial', etc; always modifying a sentence).\",\n",
-    "    8: \"Add shape errors: change the shape of a finding in the report (e.g., change ‘round’ to ‘oval’; always modifying a sentence).\",\n",
-    "    9: \"Add grammatical errors: introduce a few grammatical errors in the report (e.g., ‘the heart is normal in size’ to ‘the heart is normal in size is’ always modifying a sentence).\"\n",
+    "    0: \"add repetitions of sentences (in this case, mark the second instance of the sentence as the error, not the first)\",\n",
+    "    1: \"introduce sentences that could be part of radiology report regarding the presence of one or more of devices such as these: pacemaker, central venous line, NG tube, ET tube. Use your medical knowledge to frame sentences that sound clinically plausible.\",\n",
+    "    2: \"mislabel of the names of devices that are present in the chest. Use your medical knowledge to frame sentences that could be found in radiology chest x-ray reports.\",\n",
+    "    3: \"use your medical knowledge to change the position of a medical instrument that is clinically plausible (e.g., ET tube is 5 cm from the carina can be changed to ET tube is 1 cm from the carina).\",\n",
+    "    4: \"add omissions: remove a particular finding from the report (either removing a sentence or part of a sentence). Only remove POSITIVE findings (i.e., you can remove 'cardiomegaly' but not 'the heart is normal in size').\",\n",
+    "    5: \"add false predictions: add a finding that is not present in the report (either adding a sentence or modifying a sentence to insert). These should be plausible findings that could be present in the report.\",\n",
+    "    6: \"add incorrect severity: change the severity of a finding in the report in a manner that makes clinical sense (e.g., change 'mild' to 'moderate'; always modifying a sentence).\",\n",
+    "    7: \"add incorrect locations: change the location or anatomy of a finding in the report (e.g., change 'right' to 'left' or 'lateral' to 'medial', etc; always modifying a sentence).\",\n",
+    "    8: \"add shape errors: change the shape of a finding in the report (e.g., change ‘round’ to ‘oval’; always modifying a sentence).\",\n",
     "}\n",
-    "root_path = './test_iterative/'\n",
+    "\n",
+    "root_path = '/Users/raovish6/Downloads/iterative_tests/retrial/'\n",
     "if not os.path.exists(root_path):\n",
     "    os.mkdir(root_path)\n",
     "\n",
-    "save_iterative_errors(error_dict, testing_df, api_key, root_path)\n"
+    "# if it does not run through all the dictionary indices on the first run through, re-send the un-run indices as last argument (happens cuz api slow sometimes)\n",
+    "save_iterative_errors(error_dict, testing_df, api_key, root_path, range(3,8))\n"
    ]
   }
  ],
