--- a/run_queries.ipynb
+++ b/run_queries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "from generate_process_errors import generate_error_df, splice_sentences, save_iterative_errors\n",
     "\n",
     "api_key = '' # put in your api key\n",
+    "api_base = \"\" # put in the azure base site\n",
     "mimic_path = '/Users/raovish6/Documents/MRG_entailment/mimic_train_subset_reports_new.csv' # path to full mimic train, preprocessed by lab\n",
     "mimic_df = pd.read_csv(mimic_path)\n",
     "testing_df = mimic_df[:10]"
@@ -54,8 +55,8 @@
        "      <td>50414267</td>\n",
        "      <td>10000032</td>\n",
        "      <td>There is no focal consolidation, pleural effus...</td>\n",
-       "      <td>There is evidence of focal consolidation, pleu...</td>\n",
-       "      <td>{0: [1, 'Reversed the absence of pathologies',...</td>\n",
+       "      <td>Focal consolidation is evident, with no pleura...</td>\n",
+       "      <td>{0: [1, 'Changed no consolidation to evident c...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -66,10 +67,10 @@
        "0  50414267    10000032  There is no focal consolidation, pleural effus...   \n",
        "\n",
        "                                        Error Report  \\\n",
-       "0  There is evidence of focal consolidation, pleu...   \n",
+       "0  Focal consolidation is evident, with no pleura...   \n",
        "\n",
        "                                  Sentence Labelings  \n",
-       "0  {0: [1, 'Reversed the absence of pathologies',...  "
+       "0  {0: [1, 'Changed no consolidation to evident c...  "
       ]
      },
      "execution_count": 2,
@@ -81,7 +82,7 @@
     "# Example 1: create an error df based on a custom system prompt (assuming the prompt specifies a new line between the generated error report and sentence labeling)\n",
     "system_prompt = \"You will be given a radiology report of a chest X-ray. Your task is to change some of the statements in the report so that the report is still clinically plausible but has a different meaning than the previous report. Keep track of the sentence indexes corresponding to the sentences you change in a report.\\nFor a given report, return a new report with one or more changed sentences according to the above paragraph, a new line, and then a Python dictionary in the following format: {error sentence index : label, explanation, original sentence index]}. Make sure this format is followed exactly, including the spacing. The label is determined by the following:\\n0: unchanged sentence\\n1: changed sentence\\n‘explanation’ is determined by the following:\\nWhen the label is 1: 'explanation' should contain one statement about the change made in the sentence. The length of the statement should not exceed 15 words. When the 'label' is 0: 'explanation' should contain 'not applicable'. The error sentence indices should match the total number of sentences of the error report, after any additions, and include an entry for every sentence in the error report. For example, an error report of three sentences should have a dictionary of {0: [label, explanation, original sentence index], 1: [label, explanation, original sentence index], 2: [label, explanation, original sentence index]}. The original sentence index refers to the sentence  index of the original report that was changed. If the error is not based on a sentence from the original report (e.g. an addition) or the sentence is correct, leave the original sentence index blank.\"\n",
     "\n",
-    "error_df = generate_error_df(testing_df, api_key, system_prompt, False)\n",
+    "error_df = generate_error_df(testing_df, api_key, api_base, system_prompt, False)\n",
     "error_df.head()"
    ]
   },
@@ -126,50 +127,50 @@
        "      <td>50414267</td>\n",
        "      <td>10000032</td>\n",
        "      <td>There is no focal consolidation, pleural effus...</td>\n",
-       "      <td>There is evidence of focal consolidation, pleu...</td>\n",
+       "      <td>Focal consolidation is evident, with no pleura...</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>Reversed the absence of pathologies</td>\n",
+       "      <td>Changed no consolidation to evident consolidation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>50414267</td>\n",
        "      <td>10000032</td>\n",
-       "      <td>Bilateral nodular opacities that most likely...</td>\n",
-       "      <td>No bilateral nodular opacities that could re...</td>\n",
+       "      <td></td>\n",
+       "      <td>Bilateral nodular opacities are noted that po...</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Identified absence of nodular opacities.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>not applicable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>50414267</td>\n",
        "      <td>10000032</td>\n",
-       "      <td>The cardiomediastinal silhouette is normal</td>\n",
-       "      <td>The cardiomediastinal silhouette is enlarged</td>\n",
+       "      <td></td>\n",
+       "      <td>The cardiomediastinal silhouette appears normal</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Changed silhouette status.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>not applicable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>50414267</td>\n",
        "      <td>10000032</td>\n",
        "      <td>Clips project over the left lung, potentiall...</td>\n",
-       "      <td>Clips do not project over the left lung or wi...</td>\n",
+       "      <td>Clips project over the right lung, potentiall...</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>Clips do not project over lung.</td>\n",
+       "      <td>Changed left lung to right lung</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>50414267</td>\n",
        "      <td>10000032</td>\n",
+       "      <td></td>\n",
        "      <td>The imaged upper abdomen is unremarkable</td>\n",
-       "      <td>The imaged upper abdomen shows abnormalities</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Abnormalities found in upper abdomen.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>not applicable</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -178,24 +179,24 @@
       "text/plain": [
        "   Study ID  Subject ID                                  Original Sentence  \\\n",
        "0  50414267    10000032  There is no focal consolidation, pleural effus...   \n",
-       "1  50414267    10000032    Bilateral nodular opacities that most likely...   \n",
-       "2  50414267    10000032         The cardiomediastinal silhouette is normal   \n",
+       "1  50414267    10000032                                                      \n",
+       "2  50414267    10000032                                                      \n",
        "3  50414267    10000032    Clips project over the left lung, potentiall...   \n",
-       "4  50414267    10000032           The imaged upper abdomen is unremarkable   \n",
+       "4  50414267    10000032                                                      \n",
        "\n",
        "                                      Error Sentence  Sequence  Label  \\\n",
-       "0  There is evidence of focal consolidation, pleu...         0      1   \n",
-       "1    No bilateral nodular opacities that could re...         1      1   \n",
-       "2       The cardiomediastinal silhouette is enlarged         2      1   \n",
-       "3   Clips do not project over the left lung or wi...         3      1   \n",
-       "4       The imaged upper abdomen shows abnormalities         4      1   \n",
+       "0  Focal consolidation is evident, with no pleura...         0      1   \n",
+       "1   Bilateral nodular opacities are noted that po...         1      0   \n",
+       "2    The cardiomediastinal silhouette appears normal         2      0   \n",
+       "3   Clips project over the right lung, potentiall...         3      1   \n",
+       "4           The imaged upper abdomen is unremarkable         4      0   \n",
        "\n",
-       "                                Error Class  \n",
-       "0       Reversed the absence of pathologies  \n",
-       "1  Identified absence of nodular opacities.  \n",
-       "2                Changed silhouette status.  \n",
-       "3           Clips do not project over lung.  \n",
-       "4     Abnormalities found in upper abdomen.  "
+       "                                         Error Class  \n",
+       "0  Changed no consolidation to evident consolidation  \n",
+       "1                                     not applicable  \n",
+       "2                                     not applicable  \n",
+       "3                    Changed left lung to right lung  \n",
+       "4                                     not applicable  "
       ]
      },
      "execution_count": 4,
@@ -211,18 +212,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
+      "0\n",
+      "1\n",
+      "2\n",
       "3\n",
       "4\n",
       "5\n",
       "6\n",
-      "7\n"
+      "7\n",
+      "8\n",
+      "9\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "3\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
      ]
     }
    ],
@@ -232,23 +261,18 @@
     "# Example 2: given a dictionary of errors to try, try each of them individually and save the outputs within a root directory of choice\n",
     "\n",
     "error_dict = {\n",
-    "    0: \"add repetitions of sentences (in this case, mark the second instance of the sentence as the error, not the first)\",\n",
-    "    1: \"introduce sentences that could be part of radiology report regarding the presence of one or more of devices such as these: pacemaker, central venous line, NG tube, ET tube. Use your medical knowledge to frame sentences that sound clinically plausible.\",\n",
-    "    2: \"mislabel of the names of devices that are present in the chest. Use your medical knowledge to frame sentences that could be found in radiology chest x-ray reports.\",\n",
-    "    3: \"use your medical knowledge to change the position of a medical instrument that is clinically plausible (e.g., ET tube is 5 cm from the carina can be changed to ET tube is 1 cm from the carina).\",\n",
-    "    4: \"add omissions: remove a particular finding from the report (either removing a sentence or part of a sentence). Only remove POSITIVE findings (i.e., you can remove 'cardiomegaly' but not 'the heart is normal in size').\",\n",
-    "    5: \"add false predictions: add a finding that is not present in the report (either adding a sentence or modifying a sentence to insert). These should be plausible findings that could be present in the report.\",\n",
-    "    6: \"add incorrect severity: change the severity of a finding in the report in a manner that makes clinical sense (e.g., change 'mild' to 'moderate'; always modifying a sentence).\",\n",
-    "    7: \"add incorrect locations: change the location or anatomy of a finding in the report (e.g., change 'right' to 'left' or 'lateral' to 'medial', etc; always modifying a sentence).\",\n",
-    "    8: \"add shape errors: change the shape of a finding in the report (e.g., change ‘round’ to ‘oval’; always modifying a sentence).\",\n",
+    "    0: \"add repetitions of sentences (in this case, mark the second instance of the sentence as the error, not the first). Have one repetition per report.\",\n",
+    "    1: \"introduce sentences that could be part of a radiology report regarding the presence of one or more of devices such as these: pacemaker, central venous line, NG tube, ET tube. Use your medical knowledge to frame sentences that sound clinically plausible.\",\n",
+    "    2: \"use your medical knowledge to change the position of a medical instrument that is clinically plausible (e.g., ET tube is 5 cm from the carina can be changed to ET tube is 1 cm from the carina).\",\n",
+    "    3: \"add incorrect severity: change the severity of a finding in the report in a manner that makes clinical sense (e.g., change 'mild' to 'moderate'; always modifying a sentence).\"\n",
     "}\n",
     "\n",
-    "root_path = '/Users/raovish6/Downloads/iterative_tests/retrial/'\n",
+    "root_path = '/Users/raovish6/Downloads/iterative_tests/retrial-2/'\n",
     "if not os.path.exists(root_path):\n",
     "    os.mkdir(root_path)\n",
     "\n",
-    "# if it does not run through all the dictionary indices on the first run through, re-send the un-run indices as last argument (happens cuz api slow sometimes)\n",
-    "save_iterative_errors(error_dict, testing_df, api_key, root_path, range(3,8))\n"
+    "# if it does not run through all the dictionary indices on the first run through, re-send the un-run indices as last argument (happens cuz api gets stuck sometimes)\n",
+    "save_iterative_errors(error_dict, testing_df, api_key, api_base, root_path, [0])\n"
    ]
   }
  ],
